--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cli-spinner": "^0.2.10",
+    "cross-spawn": "^7.0.3",
+    "input": "^1.0.1",
+    "stream": "^0.0.2",
+    "ytdl-core": "^4.11.2"
+  },
+  "bin": {
+    "gzbvideo": "./bin/index.js"
+  },
+  "preferGlobal": true,
 }
